--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -3496,6 +3496,9 @@
         }
       }
     },
+    "My Communities" : {
+
+    },
     "My Profile" : {
       "localizations" : {
         "pt-BR" : {
