Feat - delete community from MyCommunitiesView

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -1608,6 +1608,9 @@
         }
       }
     },
+    "Do you really want to delete the community %@?" : {
+
+    },
     "Don't Allow" : {
       "localizations" : {
         "pt-BR" : {
