Process CommunityMessage notification payload

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -1978,6 +1978,9 @@
         }
       }
     },
+    "Error trying to fetch community info." : {
+
+    },
     "Error trying to get user ban expiration date" : {
       "extractionState" : "stale",
       "localizations" : {
